--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "helmet": "^5.0.1",
+    "joi": "^17.6.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.14.0",
